--- a/applications/robot/Cargo.toml
+++ b/applications/robot/Cargo.toml
@@ -12,12 +12,19 @@ gam3du-framework-common.workspace = true
 gam3du-framework.workspace = true
 runtime-python.workspace = true
 
-tokio = { workspace = true, features = ["rt", "signal", "macros", "time"] }
+# "signal", 
+tokio = { workspace = true, features = ["rt", "macros", "time"] }
 tokio-util = { workspace = true }
 rustpython-vm.workspace = true
 log.workspace = true
 serde_json.workspace = true
 winit = { workspace = true, default-features = true }
+
+# [target.'cfg(not(target_os = "wasm32"))'.features]
+# default = ["general_feature"]
+
+# [target.'cfg(target_arch = "wasm32")'.features]
+# default = ["winonly_replacement"]
 
 [build-dependencies]
 gam3du-framework-common.workspace = true
