--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,15 @@ members = [
     "libraries/gltf-model",
     "libraries/geometry",
     "libraries/time",
+    "xtask",
 ]
 exclude = ["winit"]
+
+# [workspace.target.'cfg(not(target_os = "windows"))'.features]
+# default = ["general_feature"]
+
+# [workspace.target.'cfg(target_os = "windows")'.features]
+# default = ["winonly_replacement"]
 
 [workspace.package]
 version = "0.1.0"
@@ -34,6 +41,15 @@ runtime-python = { path = "runtimes/python" }
 runtime-python-bindgen = { path = "runtimes/python/bindgen" }
 
 # from crates.io
+
+regex-lite = "0.1.6"
+pico-args = { version = "0.5.0", features = [
+    "eq-separator",
+    "short-space-opt",
+    "combined-flags",
+] }
+xshell = "0.2.6"
+reqwest = { version = "0.12.9", features = ["blocking"] }
 anyhow = { version = "1.0.92", default-features = false }
 bytemuck = { version = "1.19.0", default-features = false }
 ctrlc = { version = "3.4.5", default-features = false }
