migrate to web-time; add lib-file-storage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "bindgen",
         "bitor",
+        "builtins",
         "bytemuck",
         "consts",
         "fract",
