--- a/libraries/file-storage/Cargo.toml
+++ b/libraries/file-storage/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lib-time"
+name = "lib-file-storage"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -7,7 +7,6 @@ license-file.workspace = true
 readme.workspace = true
 
 [dependencies]
-web-time.workspace = true
 
 [lints]
 workspace = true
