--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "libraries/geometry",
     "libraries/time",
     "xtask",
+    "libraries/file-storage",
 ]
 exclude = ["winit"]
 
@@ -34,6 +35,7 @@ readme = "README.md"
 engine-robot = { path = "engines/robot" }
 gam3du-framework = { path = "framework" }
 gam3du-framework-common = { path = "framework/common" }
+lib-file-storage = { path = "libraries/file-storage" }
 lib-geometry = { path = "libraries/geometry" }
 lib-gltf-model = { path = "libraries/gltf-model" }
 lib-time = { path = "libraries/time" }
@@ -41,7 +43,7 @@ runtime-python = { path = "runtimes/python" }
 runtime-python-bindgen = { path = "runtimes/python/bindgen" }
 
 # from crates.io
-
+web-time = "1.1.0"
 regex-lite = "0.1.6"
 pico-args = { version = "0.5.0", features = [
     "eq-separator",
