--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -15,7 +15,7 @@ log.workspace = true
 wgpu.workspace = true
 winit = { workspace = true, default-features = true }
 pollster.workspace = true
-
+web-time.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # env_logger.workspace = true
