--- a/libraries/gltf-model/Cargo.toml
+++ b/libraries/gltf-model/Cargo.toml
@@ -16,6 +16,7 @@ bytemuck.workspace = true
 glam.workspace = true
 gltf.workspace = true
 wgpu = { workspace = true, features = ["wgsl"] }
+web-time.workspace = true
 
 [lints]
 workspace = true
