--- a/applications/robot/Cargo.toml
+++ b/applications/robot/Cargo.toml
@@ -7,16 +7,16 @@ rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
+gam3du-framework.workspace = true
 engine-robot.workspace = true
 gam3du-framework-common.workspace = true
-gam3du-framework.workspace = true
 runtime-python.workspace = true
 lib-file-storage.workspace = true
 
 web-time.workspace = true
 # "signal", 
-tokio = { workspace = true, features = ["rt", "macros", "time"] }
-tokio-util = { workspace = true }
+# tokio = { workspace = true, features = ["rt", "macros", "time"] }
+# tokio-util = { workspace = true }
 rustpython-vm.workspace = true
 log.workspace = true
 serde_json.workspace = true
@@ -27,6 +27,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 # default = ["general_feature"]
 
 # [target.'cfg(target_arch = "wasm32")'.features]
+# gam3du-framework.workspace = { workspace = true, features = ["wasm32"] }
 # default = ["winonly_replacement"]
 
 
