--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -12,15 +12,16 @@ gam3du-framework-common.workspace = true
 # ctrlc.workspace = true
 env_logger.workspace = true
 log.workspace = true
-wgpu.workspace = true
 winit = { workspace = true, default-features = true }
 pollster.workspace = true
 web-time.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+wgpu.workspace = true
 # env_logger.workspace = true
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+wgpu = { workspace = true, features = ["webgl"] }
 # winit = { workspace = true, features = ["wasm"] }
 # console_error_panic_hook.workspace = true
 # console_log.workspace = true
