--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -9,8 +9,8 @@ license-file.workspace = true
 [dependencies]
 gam3du-framework-common.workspace = true
 
+env_logger = { workspace = true, features = ["auto-color", "humantime"] }
 # ctrlc.workspace = true
-env_logger.workspace = true
 log.workspace = true
 wgpu.workspace = true
 winit = { workspace = true, default-features = true }
