switch to `tracing` for logging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "rust-analyzer.check.command": "clippy",
     "cSpell.words": [
+        "ansi",
         "bindgen",
         "bitor",
         "builtins",
         "bytemuck",
+        "calloop",
         "consts",
+        "cranelift",
         "fract",
         "gles",
         "gltf",
@@ -14,8 +17,10 @@
         "multisample",
         "multisampled",
         "multiview",
+        "naga",
         "nanos",
         "pico",
+        "pyclass",
         "pyfunction",
         "pymodule",
         "recip",
@@ -36,6 +41,7 @@
         "unpark",
         "UVEC",
         "Vsync",
+        "wasmtime",
         "wayland",
         "webgl",
         "wgpu",
