--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -16,7 +16,7 @@ lib-gltf-model.workspace = true
 
 bytemuck = { workspace = true, features = ["derive"] }
 glam = { workspace = true, features = ["bytemuck"] }
-log.workspace = true
+tracing.workspace = true
 rand.workspace = true
 rustpython-vm.workspace = true
 wgpu.workspace = true
