--- a/runtimes/python/Cargo.toml
+++ b/runtimes/python/Cargo.toml
@@ -8,7 +8,7 @@ license-file.workspace = true
 
 [dependencies]
 gam3du-framework-common.workspace = true
-log.workspace = true
+tracing.workspace = true
 rustpython-vm.workspace = true
 rustpython = { workspace = true, features = ["stdlib"] }
 runtime-python-bindgen.workspace = true
