--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -10,15 +10,15 @@ publish = false
 
 [dependencies]
 anyhow.workspace = true
-env_logger.workspace = true
 log.workspace = true
+env_logger.workspace = true
 pico-args = { workspace = true, features = [
     "eq-separator",
     "short-space-opt",
     "combined-flags",
 ] }
 xshell.workspace = true
-reqwest = { workspace = true, features = ["blocking"] }
+reqwest = { workspace = true, features = ["blocking", "default-tls"] }
 
 [lints]
 workspace = true
