--- a/framework/common/Cargo.toml
+++ b/framework/common/Cargo.toml
@@ -7,7 +7,7 @@ rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true, features = ["std", "derive"] }
 winit = { workspace = true, default-features = true }
 rand.workspace = true
 indexmap = { workspace = true, features = ["serde"] }
