--- a/winit/xtask/Cargo.toml
+++ b/winit/xtask/Cargo.toml
@@ -1,21 +1,24 @@
 [package]
 name = "xtask"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 publish = false
 
 [dependencies]
 # The dependencies in this config have no transitive dependencies.
-anyhow = "1.0.92"
 env_logger = { version = "0.11.5", default-features = false }
-regex-lite = "0.1.6"
 log = "0.4.22"
-pico-args = { version = "0.5.0", features = [
+anyhow.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+regex-lite.workspace = true
+pico-args = { workspace = true, features = [
     "eq-separator",
     "short-space-opt",
     "combined-flags",
 ] }
-xshell = "0.2.6"
-reqwest = { version = "0.12.9", features = ["blocking"] }
+xshell.workspace = true
+reqwest = { workspace = true, features = ["blocking"] }
 
-[workspace]
+[lints]
+workspace = true
