--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ tracing-subscriber = { version = "0.3", default-features = false }
 tracing-web = { version = "0.1", default-features = false }
 
 wasm-bindgen = { version = "0.2", default-features = false }
+wasm-bindgen-futures = { version = "0.4.45", default-features = false }
 web-sys = { version = "0.3", default-features = false }
 pollster = { version = "0.4.0", default-features = false }
 console_error_panic_hook = { version = "0.1", default-features = false }
