try to add shared channel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "rpass",
         "runtimes",
         "rustpython",
+        "spsc",
         "srgb",
         "struct",
         "subsec",
