clean up xtask and js-structure for worker and wasm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "builtins",
         "bytemuck",
         "calloop",
+        "canonicalize",
+        "coep",
         "consts",
         "cranelift",
         "fract",
@@ -14,6 +16,7 @@
         "gltf",
         "lerp",
         "mipmap",
+        "monokai",
         "multisample",
         "multisampled",
         "multiview",
@@ -26,6 +29,7 @@
         "recip",
         "recv",
         "repr",
+        "reqwest",
         "rpass",
         "runtimes",
         "rustpython",
