make communication to blocked Python thread work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "consts",
         "cranelift",
         "fract",
+        "getrandom",
         "gles",
         "gltf",
         "lerp",
