--- a/winit/Cargo.toml
+++ b/winit/Cargo.toml
@@ -16,6 +16,7 @@ pollster.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 web-sys.workspace = true
+wasm-bindgen.workspace = true
 
 [lints]
 workspace = true
