--- a/applications/robot/Cargo.toml
+++ b/applications/robot/Cargo.toml
@@ -6,23 +6,33 @@ edition.workspace = true
 rust-version.workspace = true
 license-file.workspace = true
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
+gam3du-framework-common.workspace = true
 gam3du-framework.workspace = true
 engine-robot.workspace = true
-gam3du-framework-common.workspace = true
 runtime-python.workspace = true
 lib-file-storage.workspace = true
 
-web-time.workspace = true
+# web-time.workspace = true
 # "signal", 
 # tokio = { workspace = true, features = ["rt", "macros", "time"] }
 # tokio-util = { workspace = true }
-rustpython-vm.workspace = true
+# rustpython-vm.workspace = true
 tracing.workspace = true
 serde_json = { workspace = true, features = ["std"] }
 winit = { workspace = true, default-features = true }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
+wasm-bindgen.workspace = true
+web-time.workspace = true
+# js-sys.workspace = true
+# wasm-rs-shared-channel = { workspace = true, features = [
+#     "serde",
+#     "serde-bincode",
+# ] }
 
 [build-dependencies]
 gam3du-framework-common.workspace = true
