make application run in the browser; connect more communication channels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "rust-analyzer.check.command": "clippy",
     "cSpell.words": [
         "ansi",
+        "bincode",
         "bindgen",
         "bitor",
         "builtins",
