fix spelling and improve spell-checker settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "rust-analyzer.check.command": "clippy",
     "cSpell.words": [
+        "actuals",
         "ansi",
         "bincode",
         "bindgen",
@@ -9,13 +10,17 @@
         "bytemuck",
         "calloop",
         "canonicalize",
+        "cdylib",
         "coep",
         "consts",
         "cranelift",
+        "externref",
+        "Externref",
         "fract",
         "getrandom",
         "gles",
         "gltf",
+        "indexmap",
         "kwargs",
         "lerp",
         "mipmap",
@@ -26,16 +31,24 @@
         "naga",
         "nanos",
         "pico",
+        "pollapiclientrequest",
         "pyclass",
         "pyfunction",
+        "pymethod",
         "pymodule",
+        "pyobj",
+        "pyobject",
+        "pystr",
         "recip",
         "recv",
         "repr",
         "reqwest",
+        "rlib",
         "rpass",
         "runtimes",
         "rustpython",
+        "serde",
+        "setunadjusted",
         "spsc",
         "srgb",
         "struct",
@@ -51,6 +64,7 @@
         "Vsync",
         "wasmtime",
         "wayland",
+        "wbindgen",
         "webgl",
         "wgpu",
         "wgsl",
@@ -58,5 +72,15 @@
         "wireframe",
         "xshell",
         "Zeroable"
+    ],
+    "cSpell.ignorePaths": [
+        "package-lock.json",
+        "node_modules",
+        "vscode-extension",
+        ".git/{info,lfs,logs,refs,objects}/**",
+        ".git/{index,*refs,*HEAD}",
+        ".vscode",
+        ".vscode-insiders",
+        "/target"
     ],
 }
